# emeraLD

./: CMakeLists.txt  MANIFEST.in  Makefile  Makefile.inc  README  README.md  emeraLD  emeraLD2R.r  example.sh  pybind11-init.sh  pybind11-merge.sh  setup.py
example/: chr20.1KG.25K_m.m3vcf.gz.tbi  chr20.1KG.25K_m.vcf.gz.tbi
src/: LICENSES  Main.cpp  Makefile  calcLD.cpp  calcLD.hpp  processGenotypes.cpp  processGenotypes.hpp  version.hpp
src/boost/dynamic_bitset/: dynamic_bitset.hpp
src/emeraldpy/: core.cpp  core.hpp  wrap.cpp
src/htslib/: LICENSE  ksort.h
src/tabix_util/: tabix.cpp  tabix.hpp
src/tabixpp/: tabix.hpp
